// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not apply 1. without attributes: 1. without attributes 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(Text, null, "hello");
};

`;

exports[`not apply 2. with plane color value: 2. with plane color value 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-background-color="red">hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        backgroundColor: "red",
      },
    },
    "hello"
  );
};

`;

exports[`not apply 3. with value inside expression: 3. with value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-background-color={"red"}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        backgroundColor: "red",
      },
    },
    "hello"
  );
};

`;
